--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -47,9 +47,9 @@ html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:b
     --nav-item-font-family: var(--font-family-title);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: 0.4rem;
+    --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
-    --nav-item-margin: 3rem 0 0 0;
+    --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
 
     --section-tagline-margin: 0;
@@ -82,6 +82,11 @@ html {
     font-size: 62.5%;
 }
 
+body, a {
+    color: var(--text-color);
+}
+
+
 body {
     color: var(--text-color);
     font-family: var(--font-family-base);
@@ -90,20 +95,20 @@ body {
     line-height: var(--line-height-base);
 }
 
-a[href] {
+a:link {
     color: var(--text-color);
     text-decoration: none;
 }
 
-a[href]:visited {
+a:visited {
     font-style: italic;
 }
 
-a[href]:hover {
+a:hover {
     text-decoration: underline;
 }
 
-a[href]:active {
+a:active {
     background-color: var(--color-light-grey);
 }
 
@@ -167,19 +172,14 @@ h1, h2, h3, h4, h5, h6 {
     float: right;
 }
 
-nav {
+.nav {
     margin: 0;
     padding: 0;
-}
-
-nav ul {
     list-style: none;
     text-align: center;
-    margin: 0;
-    padding: 0;
 }
 
-nav .nav-item {
+.nav .nav-item {
     font-family: var(--nav-item-font-family);
     font-weight: var(--nav-item-font-weight);
     font-size: var(--nav-item-font-size);
@@ -188,16 +188,16 @@ nav .nav-item {
     margin: var(--nav-item-margin);  
 }
 
-nav .nav-link {
+.nav .nav-link {
     display: block;
     padding: 0.5rem 1rem;
 }
 
-nav .nav-link:hover {
+.nav .nav-link:hover {
     color: var(--nav-item-link-hover);
 }
 
-nav .nav-link::before {
+.nav .nav-link::before {
     content: "";
     position: absolute;
     top: 0;
@@ -208,7 +208,7 @@ nav .nav-link::before {
     transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
-nav .nav-item:hover .nav-link::before {
+.nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
 }
@@ -225,7 +225,7 @@ ul.row {
     clear: both;
 }
 
-[class^="col-"] {
+[class*="col-"] {
     float: left;
     padding: 0.5rem;
 }
@@ -263,7 +263,7 @@ ul.row {
     display: block;
 }
 
-.social-link svg {
+.social-link > svg {
     fill: var(--text-color);
 }
 
