--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -171,6 +171,8 @@ h1, h2, h3, h4, h5, h6 {
 .nav {
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-align: center;
 }
 
 .nav .nav-item {
@@ -198,7 +200,7 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     background-color: var(--color-white);
     width: 0;
-    height: 20%;
+    height: 2rem;
 }
 
 .nav .nav-item:hover .nav-link::before {
@@ -289,7 +291,7 @@ ul.row {
 .button:hover {
     color: var(--button-hover-color);
     text-decoration: var(--button-hover-text-decoration);
-    background-color: var(--button-hover-background);
+    background: var(--button-hover-background);
 }
 
 .card-testimonial {
